# Shiori

./: .gitignore  .pylintrc  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
shiori/: agent.py  cli.py  mcp_servers.py  prompts.py
