[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shiori"
version = "0.1.0"
description = "Deep ML Research agent"
authors = [{ name = "Frame_17" }]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
shiori = "shiori.cli:main"

[tool.setuptools.packages.find]
where = ["."]
